# fit

./: .gitignore  LICENSE  Makefile  README.md  fit.cabal  flake.nix  hie.yaml
.github/workflows/: integrate.yaml
src/: Fit.hs
src/Fit/: Messages.hs
src/Fit/Internal/: Architecture.hs  FitFile.hs  FitParser.hs  Numbers.hs  Parse.hs
src/Fit/Messages/: Lens.hs
test/: Main.hs  TestFit.hs
test/Fit/Internal/: FitParser.hs
test/Test/Fit/Internal/: FitFile.hs  FitParser.hs  Numbers.hs
