cabal-version: 3.0
name:          fit
version:       0.5.2
license:       BSD-3-Clause
license-file:  LICENSE
author:        Matt Giles
maintainer:    matt.w.giles@gmail.com
copyright:     2014-2015 Matt Giles
synopsis:      FIT file decoder
description:
  The FIT protocol is used by many sport and fitness devices made by companies
  like Garmin, for example running watches and bike computers. `fit` provides an
  API for parsing these files for analysis or conversion.
  .
  Currently this package is a pretty low-level effort, and you'll need to be familiar
  with FIT to get much value from it. Specifically, the notion of the FIT \"profile\" is
  ignored entirely, so to make use of the decoded file you'll need to reference the
  \"Profile.xls\" spreadsheet in the <http://www.thisisant.com/resources/fit FIT SDK>.
  .
  The "Fit" module exports a convenient set of data types for examining FIT files, as
  well as some lenses for extracting specific data. It's intended that the API in the
  "Fit" module should be sufficient and convenient for most uses, but if you need access
  to the exact structure of the file you can use the data types in "Fit.Internal.FitFile"
  and parsers in "Fit.Internal.Parse".
  .
  Feel free to contact me if you have any questions, suggestions, or requests.

category:      Data, Parsing, Fitness
stability:     experimental
build-type:    Simple
bug-reports:   https://github.com/mgiles/fit/issues

source-repository head
  type:     git
  location: https://github.com/mgiles/fit/

library
  hs-source-dirs:   src
  exposed-modules:
    Fit
    Fit.Internal.Architecture
    Fit.Internal.FitFile
    Fit.Internal.FitParser
    Fit.Internal.Numbers
    Fit.Internal.Parse
    Fit.Messages
    Fit.Messages.Lens

  ghc-options:      -Wall
  build-depends:
    , attoparsec     >=0.13.2.3
    , base           ^>=4.15.1.0
    , bytestring
    , containers     >=0.5
    , contravariant
    , mtl            >=1.1
    , text

  default-language: Haskell2010

test-suite test-fit
  type:             exitcode-stdio-1.0
  main-is:          ./Main.hs
  other-modules:
    Test.Fit.Internal.FitFile
    Test.Fit.Internal.FitParser
    Test.Fit.Internal.Numbers

  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:
    , attoparsec
    , base              ^>=4.15.1.0
    , bytestring
    , containers
    , fit
    , hspec
    , hspec-attoparsec
    , mtl
    , QuickCheck
    , text

  hs-source-dirs:   test
